# fenomenplayer

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css  tailwind.config.js  tailwind.css
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
public/: hls.js
src/: api.rs  app.rs  audio.rs  main.rs  styles.rs  types.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
